--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
+        android:name=".other.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon_academeg"
         android:label="@string/app_name"
