--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile files('libs/YouTubeAndroidPlayerApi.jar')
     compile files('libs/picasso-2.5.2.jar')
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
